# BasicApp

./: CMakeLists.txt  Main.qml  main.cpp
dialogs/: CMakeLists.txt  MyDialog.qml
